[fix] : fix expose Header